--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta charset="UTF-8">
 <title>{{ site.title }}</title>
 <meta name="viewport" content="width=device-width">
-<meta name="author" content="Avi Aryan">
+<meta name="author" content="Hansen Sun">
 <link rel="author" href="https://plus.google.com/u/0/+AviAryan/posts">
 <meta name="description" content="{{ site.description }}">
 
@@ -30,18 +30,7 @@
 
 <link rel="stylesheet" href="assets/main.css"/>
 
-{% if islocal == false %}
-<!-- google analytics code -->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-42460130-3', 'auto');
-  ga('send', 'pageview');
-</script>
-{% endif %}
 
 </head>
 
